<resources>
    <string name="app_name">Preppy</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredient">ingredient</string>
    <string name="meal_buddy">Meal Buddy</string>
    <string name="recipe">recipe</string>
    <string name="add_ingredients">add ingredients</string>
    <string name="ingredientEditText">ingredient…</string>
    <string name="done">done</string>
    <string name="enter_recipe_tag">enter recipe tag…</string>
    <string name="add_ingredient">add ingredient…</string>
    <string name="add">add</string>
    <string name="cancel">Cancel</string>
    <string name="deleteIngredient">deleteIngredient</string>
    <string name="sign_out">Sign Out</string>
    <string name="add_tag">add tag…</string>
    <string name="save">save</string>
    <string name="add_tag_text">add tag</string>
    <string name="add_amount">add amount…</string>
    <string name="amount">amount…</string>
    <string name="instructions">instructions…</string>
    <string name="add_some_recipes">add some recipes!</string>
    <string name="recipes">recipes</string>
    <string name="ingredients">ingredients</string>
    <string name="settings">settings</string>
    <string name="multiple_recipes">2+ recipes</string>
    <string name="only_show_shopping_list_items">Only show shopping list items:</string>
    <string name="shopping_list">shopping list:</string>
    <string name="clear_shopping_list">clear shopping List</string>
    <string name="clear">clear</string>
    <string name="miscellaneous">miscellaneous</string>
    <string name="recipe_input">recipe…</string>
    <string name="add_recipe">add recipe</string>
    <string name="delete_recipe">delete recipe</string>
    <string name="back_button">back button</string>
    <string name="report_a_problem">report a problem</string>
    <string name="preppy">preppy</string>
    <string name="logo">logo</string>
    <string name="send_feedback">send feedback</string>
    <string name="tag">tag</string>
    <string name="tag_dialog">tag:</string>
</resources>
