<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:padding="15dp">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addRecipeTextView"
        android:layout_toStartOf="@id/dialog_recipe_recipeTagSpinner"
        android:fontFamily="sans-serif-smallcaps"
        android:text="tag: "
        android:textSize="16sp" />

    <Spinner
        android:id="@+id/dialog_recipe_recipeTagSpinner"
        style="@style/SpinnerTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addRecipeTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="30dp"
        android:autofillHints=""
        android:layout_marginStart="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/enter_recipe_tag"
        android:inputType="text"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/gray" />

    <TextView
        android:id="@+id/addRecipeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="10dp"
        android:text="@string/add_recipe"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/dialog_recipe_recipeNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_recipe_recipeTagSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_green"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/recipe_input"
        android:inputType="text"
        android:maxLength="19"
        android:padding="20dp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textColorHint="@color/gray"
        android:textSize="30sp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_recipe_addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_recipe_recipeNameEditText"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/gray"
        android:text="@string/add"
        app:cornerRadius="20dp" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_recipe_cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_recipe_recipeNameEditText"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:layout_toStartOf="@id/dialog_recipe_addButton"
        android:backgroundTint="@color/gray"
        android:text="@string/cancel"
        app:cornerRadius="20dp" />


</RelativeLayout>