<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    android:padding="15dp">


    <TextView
        android:id="@+id/dialog_ingredient_AddIngredientsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:autofillHints=""
        android:fontFamily="sans-serif-smallcaps"
        android:padding="10dp"
        android:text="@string/add_ingredients"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp" />


    <EditText
        android:id="@+id/dialog_ingredient_ingredientNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_ingredient_AddIngredientsText"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="15dp"
        android:autofillHints=""
        android:background="@drawable/edit_text_green"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:fontFamily="sans-serif-smallcaps"
        android:hint="@string/ingredientEditText"
        android:inputType="textAutoCorrect"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/white" />


    <com.getbase.floatingactionbutton.FloatingActionButton
        android:id="@+id/dialog_ingredient_addIngredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_ingredient_ingredientNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        app:fab_colorNormal="@color/black"
        app:fab_colorPressed="@color/darkBlack"
        app:fab_icon="@drawable/ic_baseline_add_white"
        app:fab_size="mini" />

    <TextView
        android:id="@+id/addIngredientTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dialog_ingredient_addIngredientButton"
        android:layout_centerHorizontal="true"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/add_ingredient" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_ingredient_doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addIngredientTextView"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/gray"
        android:text="@string/done"
        app:cornerRadius="20dp" />

</RelativeLayout>