<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:layout_marginHorizontal="5dp"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/recycler_recipe_ingredient_border">

        <TextView
            android:id="@+id/recipeIngredient_list_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_toStartOf="@id/recipeIngredient_list_shoppingCartImg"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingTop="5dp"
            android:paddingHorizontal="5dp"
            android:text="@string/ingredient"
            android:textColor="@color/white"
            android:textSize="25sp" />
        <TextView
            android:id="@+id/recipeIngredient_list_recipeName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_below="@+id/recipeIngredient_list_name"
            android:fontFamily="sans-serif-smallcaps"
            android:paddingHorizontal="5dp"
            android:paddingBottom="5dp"
            android:text="@string/recipe"
            android:textColor="@color/darkWhite"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/recipeIngredient_list_shoppingCartImg"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:contentDescription="@string/deleteIngredient"
            android:src="@drawable/ic_ingredients_white"
            android:visibility="invisible" />

    </RelativeLayout>


</com.google.android.material.card.MaterialCardView>